--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 <body>
     <header>
         <h1>Gaurav Pradhan</h1>
-        <img src="D:\Essentials\Passport_Photo.jpeg" alt="Gaurav Pradhan" class="profile-pic">
+        <img src="Profile.jpg" class="profile-pic">
         <p>Software Developer | Data Analyst</p>
     </header>
     <section>
