--- a/index.html
+++ b/index.html
@@ -86,12 +86,12 @@
     <header>
         <h1>Gaurav Pradhan</h1>
         <img src="profile.jpeg" class="profile-pic">
-        <p>Software Developer | Data Analyst</p>
+        <p>Software Developer | Data Science | Machine Learning</p>
     </header>
     <section>
         <h2>About Me</h2>
         <p>
-            Hi, I am Gaurav Pradhan, a passionate Software Developer and Data Analyst currently pursuing my B.Tech in Computer Science and Engineering (Data Science) at C.V. Raman Global University. With a strong foundation in programming, machine learning, and database management, I have successfully completed multiple academic projects and internships showcasing my technical expertise and problem-solving skills.
+            Hi, I am Gaurav Pradhan, a passionate Software Developer and Science currently pursuing my B.Tech in Computer Science and Engineering (Data Science) at C.V. Raman Global University. With a strong foundation in programming, machine learning, and database management, I have successfully completed multiple academic projects and internships showcasing my technical expertise and problem-solving skills.
         </p>
         <h2>Contact Me</h2>
         <p>Email: <a href="mailto:gauravpradhan0912@gmail.com">gauravpradhan0912@gmail.com</a></p>
