--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         header {
             text-align: center;
             padding: 2rem;
+            position: relative;
         }
         header h1 {
             font-family: 'Georgia', serif;
@@ -27,6 +28,23 @@
             height: 150px;
             object-fit: cover;
             border: 3px solid white;
+        }
+        .achievement {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            text-align: right;
+            font-family: 'Courier New', monospace;
+            font-style: italic;
+            color: #ffea00;
+            max-width: 300px;
+        }
+        .achievement img {
+            width: 60px;
+            height: 60px;
+            border-radius: 50%;
+            margin-bottom: 5px;
+            border: 2px solid white;
         }
         section {
             padding: 2rem;
@@ -85,13 +103,17 @@
 <body>
     <header>
         <h1>Gaurav Pradhan</h1>
-        <img src="profile.jpeg" class="profile-pic">
-        <p>Software Developer | Data Science | Machine Learning</p>
+        <img src="profile.jpeg" alt="Gaurav Pradhan" class="profile-pic">
+        <p>Software Developer | Data Analyst</p>
+        <div class="achievement">
+            <img src="odishaSkill.jpg" alt="Odisha Skills Medal">
+            <p>Odisha Skill 2024 Silver Medalist in IT Software Solutions for Business</p>
+        </div>
     </header>
     <section>
         <h2>About Me</h2>
         <p>
-            Hi, I am Gaurav Pradhan, a passionate Software Developer and Science currently pursuing my B.Tech in Computer Science and Engineering (Data Science) at C.V. Raman Global University. With a strong foundation in programming, machine learning, and database management, I have successfully completed multiple academic projects and internships showcasing my technical expertise and problem-solving skills.
+            Hi, I am Gaurav Pradhan, a passionate Software Developer and Data Analyst currently pursuing my B.Tech in Computer Science and Engineering (Data Science) at C.V. Raman Global University. With a strong foundation in programming, machine learning, and database management, I have successfully completed multiple academic projects and internships showcasing my technical expertise and problem-solving skills.
         </p>
         <h2>Contact Me</h2>
         <p>Email: <a href="mailto:gauravpradhan0912@gmail.com">gauravpradhan0912@gmail.com</a></p>
