--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
             background: linear-gradient(to right, #6a11cb, #2575fc);
             margin: 0;
             color: white;
+            padding: 10px;
+            border: 10px solid;
+            border-image: linear-gradient(to bottom, #ff7e5f, #feb47b) 1;
         }
         header {
             text-align: center;
@@ -33,18 +36,21 @@
             position: absolute;
             top: 20px;
             right: 20px;
-            text-align: right;
+            text-align: center;
             font-family: 'Courier New', monospace;
             font-style: italic;
             color: #ffea00;
-            max-width: 300px;
+            max-width: 400px;
         }
         .achievement img {
-            width: 60px;
-            height: 60px;
-            border-radius: 50%;
-            margin-bottom: 5px;
-            border: 2px solid white;
+            width: 250px;
+            height: 250px;
+            border-radius: 20px;
+            object-fit: contain;
+            border: 8px solid transparent;
+            background: linear-gradient(45deg, #ff7e5f, #feb47b);
+            padding: 5px;
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.5);
         }
         section {
             padding: 2rem;
@@ -107,7 +113,7 @@
         <p>Software Developer | Data Analyst</p>
         <div class="achievement">
             <img src="odishaSkill.jpg" alt="Odisha Skills Medal">
-            <p>Odisha Skill 2024 Silver Medalist in IT Software Solutions for Business</p>
+            <p>Odisha Skill 2024 Silver Medalist</p>
         </div>
     </header>
     <section>
@@ -135,7 +141,7 @@
         <div class="project-card">
             <h3>JustMuesli</h3>
             <p>Built a desktop app for customizing cereal mixes with 20+ ingredients.</p>
-            <a href="https://github.com/gaurav-0912/Just-Museli" target="_blank">View Project</a>
+            <a href="https://gaurav-0912.github.io/JustMuselie/" target="_blank">View Project</a>
         </div>
         <div class="project-card">
             <h3>Market Basket Analysis</h3>
