--- a/index.html
+++ b/index.html
@@ -37,13 +37,14 @@
             font-family: 'Courier New', monospace;
             font-style: italic;
             color: #ffea00;
-            max-width: 400px; /* Increased width */
+            max-width: 250px; /* Reduced the width */
         }
         .achievement img {
-            width: 100%; /* Make the image take the full width of the container */
+            width: 80%; /* Reduced image size */
             height: auto; /* Maintain aspect ratio */
-            border-radius: 0%; /* No border radius to make it rectangular */
-            margin-bottom: 0; /* Remove margin for a more uniform look */
+            border-radius: 5%; /* Slightly rounded corners */
+            margin-bottom: 10px;
+            filter: brightness(0.8) hue-rotate(180deg); /* Apply a color filter matching the right-side gradient */
         }
         section {
             padding: 2rem;
@@ -134,7 +135,7 @@
         <div class="project-card">
             <h3>JustMuesli</h3>
             <p>Built a desktop app for customizing cereal mixes with 20+ ingredients.</p>
-            <a href="https://github.com/gaurav-0912/Just-Museli" target="_blank">View Project</a>
+            <a href="https://gaurav-0912.github.io/JustMuselie/" target="_blank">View Project</a>
         </div>
         <div class="project-card">
             <h3>Market Basket Analysis</h3>
