--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             height: auto; /* Maintain aspect ratio */
             border-radius: 5%; /* Slightly rounded corners */
             margin-bottom: 10px;
-            filter: brightness(0.8) hue-rotate(180deg); /* Apply a color filter matching the right-side gradient */
+            /* No filter applied here for normal color */
         }
         section {
             padding: 2rem;
