--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <p>Software Developer | Data Science | Machine Learning</p>
         <div class="achievement">
             <img src="odishaSkill.jpg" alt="Odisha Skills Medal">
-            <p>Odisha Skill 2024 Silver Medalist</p>
+            <p>Odisha Skill 2024 Silver Medalist in IT Software Solution for Business</p>
         </div>
     </header>
     <section>
