--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <div class="bg-white text-black p-6 rounded-lg shadow-lg">
                     <h3 class="text-3xl mb-2 text-black">TSF Donation Camp</h3>
-                    <p class="mb-4 text-lg text-black">Developed a FinTech donation platform enabling secure contributions for NGOs via Razorpay API.</p>
+                    <p class="mb-4 text-lg text-black">Developed a FinTech donation platform with excellent UI and UX enabling secure contributions for NGOs via Razorpay API.</p>
                     <a href="https://gaurav-0912.github.io/TFS-DONATION/" target="_blank" class="text-black font-bold hover:text-gray-400 text-xl">View Project</a>
                 </div>
                 <div class="bg-white text-black p-6 rounded-lg shadow-lg">
                     <h3 class="text-3xl mb-2 text-black">JustMuesli</h3>
-                    <p class="mb-4 text-lg text-black">Built a desktop app for customizing cereal mixes with 20+ ingredients.</p>
+                    <p class="mb-4 text-lg text-black">Built a full Stack desktop app for customizing cereal mixes with 20+ ingredients with excellent UI</p>
                     <a href="https://gaurav-0912.github.io/JustMuselie/" target="_blank" class="text-black font-bold hover:text-gray-400 text-xl">View Project</a>
                 </div>
                 <div class="bg-white text-black p-6 rounded-lg shadow-lg">
